2010-04-23  MORITA Hajime  <morrita@google.com>

Reviewed by Nikolas Zimmermann.

        https://bugs.webkit.org/show_bug.cgi?id=37187
        SVG <use href="foo"> is interpreted as <use href="#foo">

        getTarget() did return url parameter as is if doesn't have
        fragment identifier. So fixed to return empty string in such case
        because we need to distinguish "yyy.html" from "xxx.svg#yyy.html".

        Test: svg/custom/broken-internal-references.svg

        * svg/SVGElement.cpp:
        (WebCore::SVGElement::insertedIntoDocument):
        * svg/SVGURIReference.cpp:
        (WebCore::SVGURIReference::getTarget):
2010-04-23  MORITA Hajime  <morrita@google.com>

        Reviewed by Nikolas Zimmermann.

        https://bugs.webkit.org/show_bug.cgi?id=37187
        SVG <use href="foo"> is interpreted as <use href="#foo">

        * platform/mac/svg/custom/broken-internal-references-expected.checksum: Added.
        * platform/mac/svg/custom/broken-internal-references-expected.png: Added.
        * platform/mac/svg/custom/broken-internal-references-expected.txt: Added.
        * svg/custom/broken-internal-references.svg: Added.
        * svg/dynamic-updates/SVGTRefElement-dom-href-attr-expected.txt:
        * svg/dynamic-updates/script-tests/SVGTRefElement-dom-href-attr.js:
        (executeTest): Updated to follow this fix. href value should be an URL, not an id.


Canonical link: https://commits.webkit.org/49467@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58187 268f45cc-cd09-0410-ab3c-d52691b4dbfc